--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
     button {
       width: 100%;
-      background-color: var(--sd-semantic-primary-default-bg);
+      background-color: var(--sd-global-blue-500);
       color: white;
       border: none;
       padding: 14px;
